// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="MuiAvatar-root MuiAvatar-circle avatar"
>
  <img
    className="MuiAvatar-img"
    src="/default_profile.jpg"
  />
</div>
`;

exports[`renders image_url 1`] = `
<div
  className="MuiAvatar-root MuiAvatar-circle avatar"
  image_url="http://someurl.com/das.png"
>
  <img
    className="MuiAvatar-img"
    src="/default_profile.jpg"
  />
</div>
`;
